# Maze

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mazefield.cpp  mazefield.h  model.cpp  model.h
src/: CMakeLists.txt  Makefile  main.cc  main.cpp
src/Controller/: controller.h
src/Mazes/: error_vert.txt  maze_10_10.txt  maze_13_13.txt
src/Model/: data.h  model.cc  model.cpp  model.h
src/Tests/: tests.cc
src/View/: mazefield.cc  mazefield.cpp  mazefield.h  view.cc  view.cpp  view.h  view.ui
src/doxygen/: Doxyfile
